tests/fail/parser-assign3.dit
A {
    String value;
}

A a;

a.value = 'test');